<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/light_dark"
    android:orientation="vertical"
     android:id="@+id/drawer_layout"
    tools:context=".DashBoard">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/navigation_drawer"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/customers_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:background="@color/light_dark"
            android:popupBackground="@color/light_dark"
            android:prompt="@string/prompt" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/customer_name"
        android:textColorHint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customer_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/customer_address"
        android:textColorHint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customer_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/customer_email"
        android:textColorHint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customer_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/customer_contact"
        android:textColorHint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customer_Contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/white" />

        <View
            android:layout_width="60dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fe_male"
            android:textColor="@color/white"

            />

        <View
            android:layout_width="25dp"
            android:layout_height="match_parent" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/load_image"
            android:layout_width="250dp"
            android:layout_height="180dp"/>
        <ImageView
            android:id="@+id/add_phto_or_take_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/image"

            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"

        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_customer"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@color/light_dark"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/update_customer"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@color/light_dark"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_customer"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@color/light_dark"
            android:text="@string/updates"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/add" />


    </LinearLayout>


</LinearLayout>