<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"

    android:orientation="vertical"

    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/greenexpense" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/user" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/label"
                android:textColor="@color/green_light"
                android:textColorHint="@color/green_light"
                android:textSize="14sp"


                >


                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/label"
                android:textColor="@color/black"
                android:textColorHint="@color/green_light"
                android:textSize="14sp"
                app:endIconMode="password_toggle"

                >


                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/btnSignIn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/action_sign_in" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or_sign"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical">


            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent" />

            <View
                android:layout_width="45dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent" />

            <View
                android:layout_width="45dp"
                android:layout_height="match_parent" />


            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent" />

            <View
                android:layout_width="45dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent" />

            <View
                android:layout_width="45dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>


    </LinearLayout>

</LinearLayout>